--- a/packages/design-system/src/css/_tokens.scss
+++ b/packages/design-system/src/css/_tokens.scss
@@ -74,18 +74,26 @@
 	--node-type-main-color: var(--prim-gray-490);
 
 	// Sticky
-	--color-sticky-default-background: var(--prim-color-alt-d);
-	--color-sticky-default-border: var(--prim-color-alt-d-shade-150);
+	--color-sticky-background: var(--prim-color-alt-d);
+	--color-sticky-border: var(--prim-color-alt-d-shade-150);
 	--color-sticky-font: var(--prim-gray-740);
+	--color-sticky-code-font: var(--color-secondary);
 	--color-sticky-code-background: var(--color-background-base);
 
-	--sticky-color-7: #f0f3f9;
-	--sticky-color-6: #e7d6ff;
-	--sticky-color-5: #d6ebff;
-	--sticky-color-4: #dcf9eb;
-	--sticky-color-3: #fbdadd;
-	--sticky-color-2: #fde9d8;
-	--sticky-color-1: #fff5d6;
+	--color-sticky-background-1: var(--color-sticky-background);
+	--color-sticky-border-1: var(--color-sticky-border);
+	--color-sticky-background-2: var(--prim-color-alt-b-tint-300);
+	--color-sticky-border-2: var(--prim-color-alt-b-tint-150);
+	--color-sticky-background-3: var(--prim-color-alt-c-tint-400);
+	--color-sticky-border-3: var(--prim-color-alt-c-tint-300);
+	--color-sticky-background-4: var(--prim-color-alt-a-tint-500);
+	--color-sticky-border-4: var(--prim-color-alt-a-tint-300);
+	--color-sticky-background-5: var(--prim-color-alt-e-tint-350);
+	--color-sticky-border-5: var(--prim-color-alt-e-tint-250);
+	--color-sticky-background-6: var(--prim-color-secondary-tint-400);
+	--color-sticky-border-6: var(--prim-color-secondary-tint-300);
+	--color-sticky-background-7: var(--prim-gray-10);
+	--color-sticky-border-7: var(--prim-gray-120);
 
 	// Expressions
 	--color-valid-resolvable-foreground: var(--prim-color-alt-a);
